Split utility and classes into multiple files, optimised fake usage

--- a/src/config/settings/config.ini
+++ b/src/config/settings/config.ini
@@ -1,6 +1,7 @@
 [Database]
 db_server_host = localhost
-db_user = sensade
-db_database = sensade
-db_password = QMGj8k8DJNiyH38dTbgy8XfPpchrnzgBAM9PrnaA
+db_user = postgres
+db_database = postgres
+#db_password = QMGj8k8DJNiyH38dTbgy8XfPpchrnzgBAM9PrnaA
+db_password = password
 db_port = 5432
