--- a/requirements.txt
+++ b/requirements.txt
@@ -1,157 +1,11 @@
-adal==1.2.7
-antlr4-python3-runtime==4.9.3
-applicationinsights==0.11.10
-argcomplete==3.1.6
-Arpeggio==2.0.2
-attrs==23.2.0
-azure-appconfiguration==1.1.1
-azure-batch==13.0.0
-azure-cli-core==2.50.0
-azure-cli-telemetry==1.0.8
-azure-common==1.1.28
-azure-core==1.30.0
-azure-cosmos==3.2.0
-azure-data-tables==12.4.0
-azure-datalake-store==0.0.53
-azure-graphrbac==0.60.0
-azure-keyvault==1.1.0
-azure-keyvault-administration==4.3.0
-azure-keyvault-certificates==4.7.0
-azure-keyvault-keys==4.8.0b2
-azure-keyvault-secrets==4.7.0
-azure-loganalytics==0.1.1
-azure-mgmt-advisor==9.0.0
-azure-mgmt-apimanagement==4.0.0
-azure-mgmt-appconfiguration==3.0.0
-azure-mgmt-appcontainers==2.0.0
-azure-mgmt-applicationinsights==1.0.0
-azure-mgmt-authorization==3.0.0
-azure-mgmt-batch==17.0.0
-azure-mgmt-batchai==7.0.0b1
-azure-mgmt-billing==6.0.0
-azure-mgmt-botservice==2.0.0
-azure-mgmt-cdn==12.0.0
-azure-mgmt-cognitiveservices==13.3.0
-azure-mgmt-compute==29.1.0
-azure-mgmt-consumption==2.0.0
-azure-mgmt-containerinstance==10.1.0
-azure-mgmt-containerregistry==10.1.0
-azure-mgmt-containerservice==24.0.0
-azure-mgmt-core==1.4.0
-azure-mgmt-cosmosdb==9.2.0
-azure-mgmt-databoxedge==1.0.0
-azure-mgmt-datalake-analytics==0.2.1
-azure-mgmt-datalake-nspkg==3.0.1
-azure-mgmt-datalake-store==0.5.0
-azure-mgmt-datamigration==10.0.0
-azure-mgmt-devtestlabs==4.0.0
-azure-mgmt-dns==8.0.0
-azure-mgmt-eventgrid==10.2.0b2
-azure-mgmt-eventhub==10.1.0
-azure-mgmt-extendedlocation==1.0.0b2
-azure-mgmt-hdinsight==9.0.0
-azure-mgmt-imagebuilder==1.2.0
-azure-mgmt-iotcentral==10.0.0b2
-azure-mgmt-iothub==2.3.0
-azure-mgmt-iothubprovisioningservices==1.1.0
-azure-mgmt-keyvault==10.2.2
-azure-mgmt-kusto==0.3.0
-azure-mgmt-loganalytics==13.0.0b4
-azure-mgmt-managedservices==1.0.0
-azure-mgmt-managementgroups==1.0.0
-azure-mgmt-maps==2.0.0
-azure-mgmt-marketplaceordering==1.1.0
-azure-mgmt-media==9.0.0
-azure-mgmt-monitor==5.0.1
-azure-mgmt-msi==7.0.0
-azure-mgmt-netapp==10.0.0
-azure-mgmt-nspkg==3.0.2
-azure-mgmt-policyinsights==1.1.0b4
-azure-mgmt-privatedns==1.0.0
-azure-mgmt-rdbms==10.2.0b10
-azure-mgmt-recoveryservices==2.4.0
-azure-mgmt-recoveryservicesbackup==6.0.0
-azure-mgmt-redhatopenshift==1.2.0
-azure-mgmt-redis==14.1.0
-azure-mgmt-relay==0.1.0
-azure-mgmt-resource==23.1.0b2
-azure-mgmt-search==9.1.0
-azure-mgmt-security==3.0.0
-azure-mgmt-servicebus==8.2.0
-azure-mgmt-servicefabric==1.0.0
-azure-mgmt-servicefabricmanagedclusters==1.0.0
-azure-mgmt-servicelinker==1.2.0b1
-azure-mgmt-signalr==1.1.0
-azure-mgmt-sql==4.0.0b10
-azure-mgmt-sqlvirtualmachine==1.0.0b5
-azure-mgmt-storage==21.0.0
-azure-mgmt-synapse==2.1.0b5
-azure-mgmt-trafficmanager==1.0.0
-azure-mgmt-web==7.0.0
-azure-multiapi-storage==1.2.0
-azure-nspkg==3.0.2
-azure-storage-common==1.4.2
-azure-synapse-accesscontrol==0.5.0
-azure-synapse-artifacts==0.15.0
-azure-synapse-managedprivateendpoints==0.4.0
-azure-synapse-spark==0.2.0
-bcrypt==4.1.2
-certifi==2024.2.2
-cffi==1.16.0
-chardet==3.0.4
-charset-normalizer==3.3.2
-colorama==0.4.6
-cryptography==42.0.3
-Deprecated==1.2.14
-dill==0.3.8
-fabric==2.7.1
-grpcio==1.51.3
-humanfriendly==10.0
-idna==3.6
-invoke==1.7.3
-isodate==0.6.1
-javaproperties==0.5.2
-jmespath==1.0.1
-jsondiff==2.0.0
-knack==0.10.1
-msal==1.22.0
-msal-extensions==1.0.0
-msrest==0.7.1
-msrestazure==0.6.4
-oauthlib==3.2.2
-packaging==23.2
-paramiko==3.4.0
-parver==0.5
-pathlib2==2.3.7.post1
-pkginfo==1.9.6
-portalocker==2.8.2
-protobuf==4.25.3
-psutil==5.9.8
-pulumi==3.74.0
-pulumi-kubernetes==3.30.1
-pulumi-random==4.13.2
-pulumi-tls==4.10.0
-pycparser==2.21
-PyGithub==1.59.1
-Pygments==2.17.2
-PyJWT==2.8.0
-pymsalruntime==0.13.12
-PyNaCl==1.5.0
-pyOpenSSL==24.0.0
-pyreadline3==3.4.1
-PySocks==1.7.1
-python-dateutil==2.8.2
-pywin32==306
-PyYAML==6.0
-requests==2.31.0
-requests-oauthlib==1.3.1
-scp==0.13.6
-semver==2.13.0
+async-timeout==4.0.3
+Faker==24.9.0
+jsonpickle==3.0.4
+line-profiler==4.1.2
+pika==1.3.2
+psycopg2-binary==2.9.9
+python-dateutil==2.9.0.post0
+redis==5.0.4
 six==1.16.0
-sshtunnel==0.1.5
-tabulate==0.9.0
-typing_extensions==4.9.0
-urllib3==2.2.0
-websocket-client==1.3.3
-wrapt==1.16.0
-xmltodict==0.13.0
+snakeviz==2.2.0
+tornado==6.4
