Setup Dockerfile and Kubernetes Service, Deployment and rabbitmq cluster

--- a/src/config/settings/config.ini
+++ b/src/config/settings/config.ini
@@ -1,7 +1,16 @@
 [Database]
+#db_server_host = host.docker.internal
 db_server_host = localhost
 db_user = postgres
 db_database = postgres
 #db_password = QMGj8k8DJNiyH38dTbgy8XfPpchrnzgBAM9PrnaA
 db_password = password
 db_port = 5432
+[MQ]
+#mq_server_host = host.docker.internal
+#mq_server_host = localhost
+mq_server_host = mq-database-script.default
+[Redis]
+#redis_server_host = host.docker.internal
+#redis_server_host = localhost
+redis_server_host = redis-service.default
