--- a/src/config/settings/config.ini
+++ b/src/config/settings/config.ini
@@ -9,7 +9,9 @@ db_port = 5432
 [MQ]
 #mq_server_host = host.docker.internal
 #mq_server_host = localhost
-mq_server_host = mq-database-script.default
+mq_server_host = mq-database-script.database-test-script
+mq_user = user
+mq_password = user
 [Redis]
 #redis_server_host = host.docker.internal
 #redis_server_host = localhost
