--- a/manifests/redis/redis-service.yaml
+++ b/manifests/redis/redis-service.yaml
@@ -2,9 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: redis-service
+  namespace: database-test-script
 spec:
   selector:
-    app: redis
+    name: redis
   ports:
     - protocol: TCP
       port: 6379
